--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "express": "^4.21.2",
     "node-telegram-bot-api": "^0.66.0"
   }
